editors/nvim-pyplyne/tree-sitter-pyplyne/test/corpus/basic.txt
==================
sequence pipeline
==================

numbers = seq [1, 2]
result = numbers |> map(_ * 10)

---

(source_file
  (line)
  (line
    (statement
      (assignment
        name: (identifier)
        value: (expression
          (shape_expression
            shape: (shape)
            value: (expression
              (pipeline
                (list_literal
                  (argument
                    (expression
                      (pipeline
                        (literal
                          (number)))))
                  (argument
                    (expression
                      (pipeline
                        (literal
                          (number)))))))))))))
  (line
    (statement
      (assignment
        name: (identifier)
        value: (expression
          (pipeline
            (identifier)
            (pipe_operator)
            (pipe_target
              (identifier)
              (trailer
                (argument_list
                  (argument
                    (expression
                      (pipeline
                        (identifier)
                        (multiply_operator)
                        (literal
                          (number))))))))))))))

==================
table pipeline
==================

rows = df [{"amount": 120}]
summary = defer rows |> where(amount > 100)

---

(source_file
  (line)
  (line
    (statement
      (assignment
        name: (identifier)
        value: (expression
          (shape_expression
            shape: (shape)
            value: (expression
              (pipeline
                (list_literal
                  (argument
                    (expression
                      (pipeline
                        (dict_literal
                          (dict_entry
                            key: (expression
                              (pipeline
                                (literal
                                  (string))))
                            value: (expression
                              (pipeline
                                (literal
                                  (number)))))))))))))))))
  (line
    (statement
      (assignment
        name: (identifier)
        value: (expression
          (defer_expression
            value: (expression
              (pipeline
                (identifier)
                (pipe_operator)
                (pipe_target
                  (identifier)
                  (trailer
                    (argument_list
                      (argument
                        (expression
                          (pipeline
                            (identifier)
                            (comparison_operator)
                            (literal
                              (number))))))))))))))))
